--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">CryptoWallet</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#" class="btn btn-primary btn-lg" data-toggle="modal"
                                       data-target="#settings-modal">Settings</a></li>
-                <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -81,8 +80,17 @@
             <header>
                 <div class="jumbotron">
                     <h1>
-                        WebApp
+                        Crypto Portfolio Tracker
                     </h1>
+                    <h4>
+                        version 93.8
+                    </h4>
+                    <div class="panel panel-info pull-right">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Portfolio Total: <span></span></h3>
+                        </div>
+
+                    </div>
                 </div>
             </header>
         </div>
@@ -216,9 +224,11 @@
 
         <div class="col-md-2 col-md-offset-0">
 
+            <span>Worth:  ${{getCurrentWorthFormatted}}</span>
+
             <button type="button" class="btn btn-default btn-xs">
                 Chart
-                {{!<span class="glyphicon glyphicon-chevron-down"></span>}}
+                <span class="glyphicon glyphicon-chevron-down"></span>
                 <span class="caret"></span>
             </button>
         </div>
@@ -234,6 +244,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="resources/jquery.sparkline.js"></script>
+<script src="resources/gserializer.js"></script>
 <script src="resources/utility.js"></script>
 <script src="main.js"></script>
 </body>
